tests/ui/parser/ferris-struct.rs
struct ğŸ¦€ {}//~ ERROR Ferris cannot be used as an identifier

fn main() {}
